# kaggle-eac-asr-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-render.txt  requirements.txt
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260619_0001_production_platform_tables.py
backend/app/: config.py  main.py
backend/app/core/: audio.py  audio_quality.py  competition.py  competition_validation.py  confidence.py  inference.py  jobs.py  language_id.py  model_adapters.py  normalization.py  permissions.py  security.py  storage.py  time.py  wer.py  (+1 more)
backend/tests/: test_health.py  test_production_platform.py
data/manifests/: kaggle-test.jsonl
docs/: API_MAP.md  ARCHITECTURE.md  COMPETITION_COMPLIANCE.md  COMPETITION_FINAL_VALIDATION.md  COMPETITION_TERMS_ACKNOWLEDGEMENT.md  DATASET_DESCRIPTION.md  HARDWARE_VALIDATION_TEMPLATE.md  LOCAL_SETUP.md  NO_MANUAL_TEST_CORRECTION_ATTESTATION.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  OPERATIONS.md  TEAM_AND_LEADERBOARD_ATTESTATION.md  THIRD_PARTY_LICENSES.md
frontend/: app.js  index.html  styles.css  submission-controls.js
infrastructure/: docker-compose.local.yml
models/: model_card_template.md
models/checkpoints/: model-metadata.example.json
outputs/: afrivoice_eac_asr_blueprint.md
reports/: competition_validation_report.json  competition_validation_report.md  final_hardware_latency_report.json
scripts/: bootstrap_local.sh  clean_generated.sh  generate_kaggle_submission.py  run_local.sh  smoke_check.sh  test_local.sh
(+29 files in other folders)
