[project]
name = "afrivoice-eac-asr"
version = "0.1.0"
description = "Local ASR engineering platform for six East African languages."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  ".venv",
  "outputs",
  "data/raw",
  "models/checkpoints",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
